change highlights style

--- a/_includes/_partial/after_footer.html
+++ b/_includes/_partial/after_footer.html
@@ -115,6 +115,11 @@ $(document).ready(function(){
   });
 });
 </script>
+<script type="module">
+    import hljs from 'https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/+esm';
+
+    hljs.highlightAll();
+</script>
 {% endif %}
 
 {% if (page.layout == 'post' or page.layout == 'page' or page.layout == 'photo') and !site.jiathis.enable  %}
