--- a/_includes/_partial/head.html
+++ b/_includes/_partial/head.html
@@ -52,6 +52,8 @@
 
     <link rel="stylesheet" href="{{ site.baseurl }}{{ site.assets }}/css/style.css" type="text/css">
     <link rel="stylesheet" href="{{ site.baseurl }}{{ site.assets }}/css/highlight.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.9.0/styles/vs2015.css">
+
     {% if site.banner_img %}
     <style>
         body >header {
