--- a/_includes/_partial/head.html
+++ b/_includes/_partial/head.html
@@ -52,7 +52,7 @@
 
     <link rel="stylesheet" href="{{ site.baseurl }}{{ site.assets }}/css/style.css" type="text/css">
     <link rel="stylesheet" href="{{ site.baseurl }}{{ site.assets }}/css/highlight.css" type="text/css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlight.js@11.11.1/styles/{{ site.codestyle }}">
+    <link rel="stylesheet" href="{{ site.baseurl }}{{ site.assets }}/css/{{ site.codestyle }}">
 
     {% if site.banner_img %}
     <style>
