--- a/_includes/_partial/after_footer.html
+++ b/_includes/_partial/after_footer.html
@@ -220,7 +220,7 @@ var disqus_shortname = '{{ site.disqus_shortname }}';
 <script src="https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js"></script>
 <script>
   var yunTieProductKey = "{{ site.yungentie_productkey }}";
-  Tie.loader("aHR0cHM6Ly9hcGkuZ2VudGllLjE2My5jb20vZXh0ZW5kL2xpc3Rfam9pbl9zY3JpcHQuaHRtbA==", true);
+  Tie.loader("", true);
 </script>
 {% endif %}
 
