--- a/_includes/_partial/head.html
+++ b/_includes/_partial/head.html
@@ -51,8 +51,7 @@
     {% endif %}
 
     <link rel="stylesheet" href="{{ site.baseurl }}{{ site.assets }}/css/style.css" type="text/css">
-    <link rel="stylesheet" href="{{ site.baseurl }}{{ site.assets }}/css/highlight.css" type="text/css">
-    <link rel="stylesheet" href="{{ site.baseurl }}{{ site.assets }}/css/{{ site.codestyle }}">
+    <link rel="stylesheet" href="{{ site.baseurl }}{{ site.assets }}/css/{{ site.codestyle }}" type="text/css">
 
     {% if site.banner_img %}
     <style>
