fix categories and tags format
调整分类和标签的展示，使之保持整齐

--- a/_includes/_partial/post/catetags.html
+++ b/_includes/_partial/post/catetags.html
@@ -4,7 +4,7 @@
       <span></span>
       {% for category in item.categories %}
         {% assign slug = category | slugify %}
-        <a class="article-category-link" href="{{ site.baseurl }}/categories/{{ slug }}/">{{ category }}</a>
+        <a href="{{ site.baseurl }}/categories/{{ slug }}/">{{ category }}</a>
       {% endfor %}
     </div>
   {% endif %}
